pxc/tests/test_031_thrattr/pure4.px

public namespace pure4;
import core::common -;

threaded struct foo {
  public function int bar() {
    return 3;
  }
}

pure function int get_foo_bar(foo mutable& x)
{
  return x.bar(); // error: bar is not pure
}

foo x;
println(get_foo_bar(x));

